--- a/bower.json
+++ b/bower.json
@@ -9,10 +9,13 @@
     "es5-shim": "~2.0.8",
     "angular-resource": "~1.0.7",
     "angular-cookies": "~1.0.7",
-    "angular-strap" : "~0.7.5"
+    "angular-strap": "~0.7.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
     "angular-scenario": "~1.0.7"
+  },
+  "resolutions": {
+    "bootstrap": ">=2.0.4 <3.0"
   }
 }
