--- a/bower.json
+++ b/bower.json
@@ -9,13 +9,19 @@
     "es5-shim": "~2.0.8",
     "angular-resource": "~1.0.7",
     "angular-cookies": "~1.0.7",
-    "angular-strap": "~0.7.5"
+    "angular-strap": "~0.7.5",
+    "angular-ui-form-validation": "~0.0.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
     "angular-scenario": "~1.0.7"
   },
   "resolutions": {
-    "bootstrap": ">=2.0.4 <3.0"
+    "bootstrap": ">=2.0.4 <3.0",
+    "angular": "~1.0.7",
+    "jquery": "~1.9.1",
+    "es5-shim": "~2.0.8",
+    "angular-resource": "~1.0.7",
+    "angular-cookies": "~1.0.7"
   }
 }
