--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-resource": "~1.0.7",
     "angular-cookies": "~1.0.7",
     "angular-strap": "~0.7.5",
-    "angular-ui-form-validation": "~0.0.2"
+    "angular-ui-form-validation": "~0.0.2",
+    "underscore": "~1.5.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
